src/test/deca/context/invalid/SO/accesNonInitialise.deca
// Description:
//    tests de programme incorrect contextuellement
//
// Resultats:
//    ligne 12 : Erreur, variable déjà utilisé
//
// Historique:
//    cree le 10/01/2022

{
    int a = y;
}